fixed ul spacing

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ section {
 }
 
 ul {
-    margin: 1rem;
+    margin: 0 0 0 1rem;
     padding: 0;
 }
 
